--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,16 @@ dependencies = [
     "python-pptx>=1.0.2",
     "torch>=2.8.0",
     "transformers>=4.56.1",
+    "chromadb>=0.4.22",
+    "sentence-transformers>=2.7.0",
+    "nltk>=3.9.1",
+    "PyPDF2>=3.0.1",
+    "python-docx>=1.1.0",
+    "fastapi>=0.110.0",
+    "uvicorn>=0.27.0",
+    "aiofiles>=23.2.1",
+    "jinja2>=3.1.3",
+    "python-multipart>=0.0.9",
 ]
 
 [tool.setuptools.packages.find]
